<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/MyTheme">


        <ImageView
            android:id="@+id/photo"
            style="@style/MyImageViewPhoto"
            android:layout_width="@dimen/width_photo"
            android:layout_height="@dimen/height_photo"
            app:srcCompat = "@drawable/baseline_sentiment_satisfied_alt_24"
            android:background="@color/yellow"
            android:contentDescription="@string/photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_name_layout"
            style="@style/MyTextInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/helper_input_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_phone_layout"
            style="@style/MyTextInputLayoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/helper_input_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_for_activity"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_man"
                style="@style/MyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_m" />

            <RadioButton
                android:id="@+id/radio_button_woman"
                style="@style/MyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_w" />

        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/enable_notifications"
            style="@style/MyThemeOverlay.App.Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receive_notifications" />

        <CheckBox
            android:id="@+id/notification_authorization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorization_on_the_device" />

        <CheckBox
            android:id="@+id/notification_new_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_products_and_offers" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/margin_for_activity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score" />

            <TextView
                android:id="@+id/count_scores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/count_score" />

        </LinearLayout>


        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_for_activity"
            android:progress="44" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button"
            android:layout_marginVertical="@dimen/margin_for_activity"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>